ard: SUN/183 doesn't have any figures so don't put in a list of them

--- a/libraries/ard/sun183.tex
+++ b/libraries/ard/sun183.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{starlink}
+\documentclass[11pt,nolof]{starlink}
 
 % -----------------------------------------------------------------------------
 % ? Document identification
